--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
         }
     ],
     "require": {
-        "illuminate/support": "^6.0",
-        "symfony/process": "^4.3",
-        "illuminate/console": "^6.0",
-        "illuminate/filesystem": "^6.0",
-        "illuminate/view": "^6.0",
-        "illuminate/auth": "^6.0"
+        "illuminate/support": "^6.0|^7.0",
+        "symfony/process": "^5.0",
+        "illuminate/console": "^6.0|^7.0",
+        "illuminate/filesystem": "^6.0|^7.0",
+        "illuminate/view": "^6.0|^7.0",
+        "illuminate/auth": "^6.0|^7.0"
     },
     "autoload": {
         "psr-4": {
