--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
         "illuminate/view": "^10.0",
         "illuminate/auth": "^10.0"
     },
+    "require-dev": {
+        "laravel/pint": "^1.13"
+    },
     "autoload": {
         "psr-4": {
             "Vanguard\\Plugins\\": "src/"
