--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
         }
     ],
     "require": {
-        "illuminate/support": "^10.0|^11.0",
-        "symfony/process": "^6.0|^7.0",
-        "illuminate/console": "^10.0|^11.0",
-        "illuminate/filesystem": "^10.0|^11.0",
-        "illuminate/view": "^10.0|^11.0",
-        "illuminate/auth": "^10.0|^11.0"
+        "illuminate/support": "^12.0",
+        "symfony/process": "^7.0",
+        "illuminate/console": "^12.0",
+        "illuminate/filesystem": "^12.0",
+        "illuminate/view": "^12.0",
+        "illuminate/auth": "^12.0"
     },
     "require-dev": {
         "laravel/pint": "^1.13"
